--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,12 +15,25 @@
     },
     "plugins": [
         "@typescript-eslint",
-        "prettier"
+        "prettier",
+        "eslint-plugin-import-helpers"
     ],
     "rules": {
-        "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": [
-            "error"
+        "camelcase": "error",
+        "prettier/prettier": "error",
+        "import/no-unresolved": "error",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ],
+                "custom": {
+                    "regex": "^I[A-Z]",
+                    "match": true
+                }
+            }
         ],
         "import/extensions": [
             "error",
@@ -29,11 +42,7 @@
                 "ts": "never"
             }
         ],
-        "prettier/prettier": "error"
-    },
-    "settings": {
-        "import/resolver": {
-            "typescript": {}
-        }
+        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off"
     }
 }
