--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
     },
     "dependencies": {
+        "csv-parse": "^5.3.0",
+        "csv-parser": "^3.0.0",
         "express": "^4.18.1",
         "multer": "^1.4.5-lts.1",
         "uuid": "^8.3.2"
